# openni

./: .gitcloned  CMakeLists.txt  openni-config.cmake
Include/: XnCppWrapper.h  XnHash.h  XnList.h  XnOS.h
Include/Linux-x86/: XnPlatformLinux-x86.h
Include/MacOSX/: XnOSMacOSX.h
Samples/: CMakeLists.txt
Samples/Kinect/: kinect-motors.cpp
Samples/NiAudioSample/: CMakeLists.txt
Samples/NiBackRecorder/: CMakeLists.txt
Samples/NiCRead/: CMakeLists.txt
Samples/NiConvertXToONI/: CMakeLists.txt
Samples/NiRecordSynthetic/: CMakeLists.txt
Samples/NiSampleModule/: CMakeLists.txt
Samples/NiSimpleCreate/: CMakeLists.txt
Samples/NiSimpleRead/: CMakeLists.txt
Samples/NiSimpleViewer/: CMakeLists.txt  NiSimpleViewer.cpp
Samples/NiUserTracker/: CMakeLists.txt  main.cpp
Samples/NiUserTracker/GL/: glut.h
Samples/NiViewer/: CMakeLists.txt  NiViewer.cpp
Source/Modules/: CMakeLists.txt
Source/Modules/Common/: CMakeLists.txt
Source/Modules/nimCodecs/: CMakeLists.txt
Source/Modules/nimMockNodes/: CMakeLists.txt
Source/Modules/nimRecorder/: CMakeLists.txt
Source/OpenNI/: CMakeLists.txt  XnModuleLoader.cpp  XnModuleLoader.h  XnOpenNI.cpp  XnProfiling.cpp
Source/OpenNI/Linux/: LinuxFiles.cpp  LinuxSharedLibs.cpp  XnUSBLinux.cpp
Source/OpenNI/Linux-x86/: Linux-x86Files.cpp  Linux-x86SharedLibs.cpp  XnUSBLinux-x86.cpp
Source/OpenNI/Win32/: Win32Files.cpp  Win32SharedLibs.cpp
Source/Utils/niLicense/: CMakeLists.txt  niLicense.cpp
Source/Utils/niReg/: CMakeLists.txt
config/: SamplesConfig.xml  modules.xml.linux  modules.xml.mac  modules.xml.win32
